Add DayNight Mode
Use object of javascript

--- a/style.css
+++ b/style.css
@@ -2,20 +2,20 @@ body{
   margin:0;
 }
 a {
-  color:black;
+  color:blue;
 }
 h1 {
   font-size:45px;
   text-align: center;
-  border-bottom:1px solid gray;
+  /*border-bottom:1px solid gray;*/
   margin:0;
   padding:20px;
 }
 ol{
-  border-right:1px solid gray;
+  /*border-right:1px solid gray;*/
   width:100px;
   margin:0;
-  padding:20px;
+  padding:25px;
 }
 #grid{
   display: grid;
